--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,8 +7,9 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11793980.md#1">【唐靖远快评】武统台湾？中共恐有心无力</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11790802.md#1">中共外交部胡言乱语实录</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801219.md#1">大陆多座城市医院启动一级防护 传医护中招</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11804120.md#1">诸葛高参：行动，灭共于2020</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803302.md#1">周晓辉：习近平未去美国签约背后隐藏的危机</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803257.md#1">颜丹：中国“人均GDP过万”为何毫无意义？</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801506.md#1">颜丹：中国人何时不再当中共的人质？</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800656.md#1">陈思敏：京沪高铁不缺钱为何还要上市</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799968.md#1">俞晓薇：韩国和大陆法轮功学员境遇两重天</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800085.md#1">陆言：共产党离灭亡的终点还有多远？</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
