--- a/gb/ncid283_3.md
+++ b/gb/ncid283_3.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11779864.md#1" target="_blank">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11779864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/09/309034826938-150x120.jpg" align ="left"></a>近日江苏政府声称年底脱贫率已经超过99.99%，仅有17人未脱贫，此精准数字遭民间极大质疑，有大陆媒体人认为即使达到官方的脱贫数字，其实也摆脱不了贫困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 10:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11779137.md#1" target="_blank">售价贵服务差 天津百年老店狗不理陷困境</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11779137.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/IMG_0103-1-1068x892-150x120.jpg" align ="left"></a>天津百年老店狗不理包子近来因遭到消费者大量负评，失去百年老店的光环。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 8:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11779313.md#1" target="_blank">中国主要城市写字楼空置率惊人 近乎鬼城</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11779313.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-477948958-150x120.jpg" align ="left"></a>“今年会是深圳写字楼市场过往十年最坏的一年，也会是接下来十年最好的一年。”高力国际高管如是说。经济放缓加剧，已推动中国的写字楼空置率达到自2008年金融海啸以来的最高水平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 6:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11778820.md#1" target="_blank">对美承诺或成空 传大陆再买10批巴西大豆</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11778820.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>日前有消息称，大陆本周又购买了10批次巴西大豆，而且中共农业部官员称“不会调整3大粮食的进口配额”，此举引发了外界对中共承诺购买400亿美元美国农产品的质疑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 3:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11791062.md#1" target="_blank">深圳区级国企一晚宴吃16万? 网民：冰山一角</a><br></h3>深圳市某区属国有企业，近日被曝一场企业内部宴会花费16万元（人民币，下同），有网民表示，这只曝出国企大吃大喝的冰山一角。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 5:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11787628.md#1" target="_blank">赤字多又缺钱 中共地方当局紧缩开支</a><br></h3>中国统计局陆续公布各省市截至去年11月的收支情况，数据显示，不少富裕省市也出现了严重财政赤字。多个地方政府已下达命令，立即收缩开支。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 7:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/aiaxj298/djy/blob/master/gb/ncid283_3.md#1<br><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/ncid283_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_3.htm">http://www.epochtimes.com/gb/ncid283_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
