--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -27,6 +27,7 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11781782.md#1" target="_blank">天地清明引(166) 东流水－各方摊牌2</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11781782.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/8f686ba2bd0c3593a6afd717e72fa4c3-150x120.png" align ="left"></a>清晨，昭雪甫醒，心下大惊：“昨日纳兰审问名册之事……”即刻令红缨更衣，回转花园。秋菊清芳依旧，露珠点点，不改高洁。昭雪双手抚着，一朵一朵翻找，却是一无所获，登时坐于石凳之上，不知所措。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788040.md#1" target="_blank">五律：朝霞</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788040.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/10/100421092855100093_1-150x120.jpg" align ="left"></a> 朝霞凌夜出，烟景射金红。 云海横空壮，天光拔地雄。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 3:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/8/n11777539.md#1" target="_blank">“蓝出于青”的幽默才子纪晓岚</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/8/n11777539.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/6cc45c9ea48e4d3f90f8670f5671e4c9-150x120.jpg" align ="left"></a>纪昀，字晓岚，晚号石云、道号观弈道人。雍正二年六月，出生在河间府献县崔尔庄对云楼。他出生即伴异象。朱珪在《纪晓岚墓志铭》中记载，纪晓岚出生时，“天雨则汪洋成巨浸，水中夜夜有光怪。”纪晓岚出生后，“光遂隐”。纪晓岚的祖父纪天申也梦见有光团潜入对云楼中，人们纷纷传说，纪晓岚是灵物转生的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 11:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795812.md#1" target="_blank">五律：琴</a><br></h3>大雅从天下，逸情挥古今。 高山听独啸，流水作长吟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:20 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795811.md#1" target="_blank">神韵行（三十）</a><br></h3>妙乐传，缃绫绚，
 仙子飘飘下南天，
 雾中隐隐亭台现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:17 AM			</td></tr>
@@ -34,6 +35,5 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788113.md#1" target="_blank">七律：新元已启</a><br></h3> 纪元新岁已开头， 变幻风云恶未休。 簌簌有声肩雪落， 凄凄无语树禽愁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11790520.md#1" target="_blank">神韵行（二十九）</a><br></h3>久怀慕蔺，来朝天国，一赌盛唐气象。 龙楼凤阙五云光，问是在、人间天上？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788108.md#1" target="_blank">诗歌：冰河</a><br></h3> 半封河面回冰雪， 风卷隆冬天气寒。 树结雾凇山白发， 河凝霞影水红颜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 10:52 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788065.md#1" target="_blank">七律：雾霾</a><br></h3> 平地雾霾三万丈， 遮天敝日覆重城。 山河失色愁容漫， 未日无声惨淡萦。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 10:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/aiaxj298/djy/blob/master/gb/news2007_2.md#1<br><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/news2007_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_2.htm">http://www.epochtimes.com/gb/news2007_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
